# AADC_2015_FRUIT

./: LICENSE  Readme.md
AADC/src/: AADCConfig.cmake  CMakeLists.txt  Readme.txt  build_all.sh  build_base.sh  build_base_win.bat  build_user.sh  build_user_win.bat
AADC/src/adtfBase/: CMakeLists.txt
AADC/src/adtfBase/AADC_ADTF_BaseFilters/: CMakeLists.txt
AADC/src/adtfBase/AADC_ADTF_BaseFilters/description/: aadc.description  adtf.description
AADC/src/adtfBase/AADC_ADTF_BaseFilters/include/: aadc.h  arduinoProtocol.h
AADC/src/adtfBase/AADC_ADTF_ImageProcFilters/: CMakeLists.txt  Readme.txt
AADC/src/adtfBase/AADC_ADTF_ImageProcFilters/description/: aadcImgProc.description
AADC/src/adtfBase/AADC_ADTF_ImageProcFilters/src/: Readme.txt
AADC/src/adtfBase/AADC_ADTF_Libs/: CMakeLists.txt  Readme.txt
AADC/src/adtfBase/AADC_ADTF_Libs/src/: Readme.txt
AADC/src/adtfUser/: CMakeLists.txt  Readme.txt
AADC/src/adtfUser/demo/: CMakeLists.txt  Readme.txt
AADC/src/adtfUser/demo/description/: aadcImgProc.description
AADC/src/adtfUser/demo/src/: Readme.txt
AADC/src/adtfUser/dev/: CMakeLists.txt
AADC/src/adtfUser/dev/description/: fruit.description
AADC/src/adtfUser/dev/include/: template_data.h
AADC/src/adtfUser/dev/src/util/: history.cpp  (+20 more)
AADC/test/: CMakeLists.txt  Readme.txt  build_tests.sh  build_tests_win.bat  do_test.sh  do_test_win.bat
AADC/test/integration/: CMakeLists.txt  Readme.txt
AADC/test/integration/aadc_aktors_comm_sensors/src/: CMakeLists.txt  tester_aadc_aktors_comm_sensors.cpp  tester_aadc_aktors_comm_sensors.h
AADC/test/module/: CMakeLists.txt  Readme.txt
AADC/test/module/aadc_aktors/src/: CMakeLists.txt  main.cpp  stdafx.h  tester_aadc_aktors.cpp  tester_aadc_aktors.h
AADC/test/module/aadc_arduino_comm/src/: CMakeLists.txt  stdafx.cpp  tester_aadc_arduino_comm.cpp  tester_aadc_arduino_comm.h
AADC/test/module/aadc_sensors/src/: CMakeLists.txt  tester_aadc_sensors.cpp  tester_aadc_sensors.h
Freestyle/clsquare/: CMakeLists.txt
Freestyle/clsquare/cmake/: CMakeLists.txt  FindANN.cmake  FindCBLAS.cmake  FindEigen3.cmake  FindFLTK.cmake  FindFTD2XX.cmake  FindFTDI.cmake  FindGSL.cmake  FindGeneric.cmake  FindNFQCA.cmake  FindPCan.cmake  FindPlotter.cmake  FindROS.cmake  FindROSCLS.cmake  FindUsb-1.0.cmake  FindUsb.cmake  FindV4L.cmake
Freestyle/clsquare/scripts/: clear_trial.bash  do_clean.sh  do_eclipse_build.sh  do_eclipse_clean.sh  do_initial_build.sh  start_trial.bash
Freestyle/clsquare/src/: CMakeLists.txt
Freestyle/clsquare/src/control/CenterControl/: centercontrol.cpp  centercontrol.h
Freestyle/clsquare/src/control/EmotivController/: Sources.cmake  emotivcontrol.cpp  emotivcontrol.h
Freestyle/clsquare/src/control/MixControl/: Sources.cmake  action.h  mixcontrol.cpp  mixcontrol.h  operation.cpp  operation.h  operations.cpp  operations.h  slave.h
Freestyle/clsquare/src/graphic/DefaultGraphic/: Sources.cmake  defaultgraphic.h
Freestyle/clsquare/src/input/DefaultInput/: Sources.cmake  defaultinput.cc  defaultinput.h
Freestyle/clsquare/src/kernel/: Sources.cmake  controller.h  global.h  graphic.h  input.h  kerneldatatypes.cc  kerneldatatypes.h  mainloop.cc  mainloop.h  observer.cc  observer.h  output.h  plant.cc  plant.h  registry.cc  registry.h  reward.cc  reward.h  statistics.cc  statistics.h  valueparser.cc  valueparser.h
Freestyle/clsquare/src/libs/Emotiv/: CMakeLists.txt  CMakeOptions.txt
Freestyle/clsquare/src/libs/Tapir/: CMakeLists.txt  CMakeOptions.txt
Freestyle/clsquare/src/observer/EmotivObserver/: Sources.cmake  emotivobserver.cpp  emotivobserver.h  eog2tapir.cpp  eog2tapir.h  eogobserver.cpp  eogobserver.h  kukabinary.cpp  kukabinary.h  processedeog.cpp  processedeog.h
Freestyle/clsquare/src/output/DefaultOutput/: Sources.cmake  defaultoutput.cc  defaultoutput.h
Freestyle/clsquare/src/plant/MultiPlant/: Sources.cmake  multiplant.cc  multiplant.h
Freestyle/clsquare/src/plant/TapirPlant/: Sources.cmake  tapirplant.cc  tapirplant.h
Freestyle/clsquare/src/reward/StandardReward/: Sources.cmake  standardreward.cc  standardreward.h
Freestyle/clsquare/src/statistics/: GeneralStatistics.cc  GeneralStatistics.h
Freestyle/clsquare/src/utils/: Socket.cc  Socket.h  Sources.cmake  aset.cc  aset.h  cls_random.cc  costfunc.cc  costfunc.h  filter.cc  filter.h  funcgen1d.cc  funcgen1d.h  model.h  qfunction.h  random.h  setdef.cc  setdef.h  str2val.cc  str2val.h  sysmodel.cc  sysmodel.h  tcpsocket.cc  tcpsocket.h  udpsocket.cc  udpsocket.h
Freestyle/clsquare/src/utils/BatchUtils/: AbstractBatchController.cc  AbstractBatchController.h  BatchData.cc  BatchData.h  Operator.h  VectorArithmetic.cc  VectorArithmetic.h
Freestyle/clsquare/src/utils/ImageSourceUtils/: Sources.cmake  imagesourceutil.h
Freestyle/clsquare/tools/: CMakeLists.txt
Freestyle/tapir/: CMakeLists.txt  Doxyfile  License  configuration.cmake.in  install
Freestyle/tapir/registry/: CMakeLists.txt  FindCvBlob.cmake  FindFLTK.cmake  FindOpenCV.cmake  FindV4L.cmake
Freestyle/tapir/share/cvblob/: cvBlobConfig.cmake
Freestyle/tapir/src/: CMakeLists.txt
Freestyle/tapir/src/display/FLTKDisplay/: Fl_cvDisplay.cpp  Fl_cvDisplay.h  Sources.cmake  fltkdisplay.cpp  fltkdisplay.h
Freestyle/tapir/src/imgsource/DefaultSources/: Sources.cmake  camsource.cpp  camsource.h  filesource.cpp  filesource.h  pipedfilesource.cpp  pipedfilesource.h
Freestyle/tapir/src/kernel/: Sources.cmake  detector.h  display.h  doc.h  global.h  imagesource.h  mainloop.cpp  modules.h  object.h  opencv.cmake  output.h  pipe.cpp  pipe.h  registry.cpp  registry.h  terminal.h  tracker.h  valueparser.cpp  valueparser.h
Freestyle/tapir/src/libs/CvBlob/: CMakeLists.txt  CMakeOptions.txt
Freestyle/tapir/src/output/SharedMemory/: Sources.cmake  mosmemoutput.cpp  mosmemoutput.h  smemoutput.cpp  smemoutput.h
Freestyle/tapir/src/tracker/GUITracker/: Sources.cmake  guitracker.cpp  guitracker.h
Freestyle/tapir/src/tracker/MultiTracker/: Sources.cmake  multitracker.cpp  multitracker.h
Freestyle/tapir/src/tracker/SimpleTracker/: Sources.cmake  basetracker.cpp  basetracker.h
(+1827 files in other folders)
