include_directories(./include)

add_subdirectory(src/mooseFilter)
add_subdirectory(src/printFilter)
add_subdirectory(src/laneFilter)
add_subdirectory(src/motorFilter)
add_subdirectory(src/steeringFilter)
add_subdirectory(src/objectFilter)
add_subdirectory(src/baselineFilter)
add_subdirectory(src/mapFilter)
add_subdirectory(src/yawExtractorFilter)
add_subdirectory(src/speedCalculatorFilter)
add_subdirectory(src/transformationFilter)
add_subdirectory(src/sensorPackageFilter)
add_subdirectory(src/wheelLockFilter)
add_subdirectory(src/driverModuleFilter)
add_subdirectory(src/crossroadScriptFilter)
add_subdirectory(src/imageCropFilter)
add_subdirectory(src/lycheeScriptFilter)
add_subdirectory(src/lightMachineFilter)
add_subdirectory(src/melonMarkerFilter)
add_subdirectory(src/signalSenderFilter)
add_subdirectory(src/boolSenderFilter)
add_subdirectory(src/emergencyFilter)
